--- a/notebooks/04-baseline-models.ipynb
+++ b/notebooks/04-baseline-models.ipynb
@@ -7,13 +7,12 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "\n",
     "from sklearn.linear_model import LinearRegression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +41,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gridStart</th>\n",
+       "      <th>year</th>\n",
+       "      <th>round</th>\n",
+       "      <th>positionOrder</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>9</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>3</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   gridStart  year  round  positionOrder\n",
+       "0          1  2008      1              1\n",
+       "1          9  2008      2              5\n",
+       "2          3  2008      3             13"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_train.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +124,7 @@
        "0.34854908299384657"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,6 +132,446 @@
    "source": [
     "reg = LinearRegression().fit(df_train.iloc[:,:-3], df_train.iloc[:,-1:])\n",
     "reg.score(df_train.iloc[:,:-3], df_train.iloc[:,-1:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gridStart</th>\n",
+       "      <th>year</th>\n",
+       "      <th>round</th>\n",
+       "      <th>positionOrder</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>284</th>\n",
+       "      <td>10</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>19</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1010</th>\n",
+       "      <td>12</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>19</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1537</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>19</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3582</th>\n",
+       "      <td>9</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>19</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23408</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>19</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23618</th>\n",
+       "      <td>11</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>19</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23953</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>19</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24571</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>19</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24712</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>19</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24949</th>\n",
+       "      <td>8</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>19</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25011</th>\n",
+       "      <td>13</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>19</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25111</th>\n",
+       "      <td>14</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>19</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25197</th>\n",
+       "      <td>7</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>19</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25303</th>\n",
+       "      <td>6</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>19</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25384</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>19</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25482</th>\n",
+       "      <td>17</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>19</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25521</th>\n",
+       "      <td>16</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>19</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25546</th>\n",
+       "      <td>15</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>19</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25568</th>\n",
+       "      <td>18</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>19</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25590</th>\n",
+       "      <td>19</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>19</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       gridStart  year  round  positionOrder\n",
+       "284           10  2021     19              1\n",
+       "1010          12  2021     19              9\n",
+       "1537           0  2021     19             12\n",
+       "3582           9  2021     19             11\n",
+       "23408          4  2021     19              4\n",
+       "23618         11  2021     19             19\n",
+       "23953          1  2021     19              3\n",
+       "24571          3  2021     19              6\n",
+       "24712          2  2021     19              2\n",
+       "24949          8  2021     19              8\n",
+       "25011         13  2021     19             14\n",
+       "25111         14  2021     19             20\n",
+       "25197          7  2021     19              7\n",
+       "25303          6  2021     19              5\n",
+       "25384          5  2021     19             10\n",
+       "25482         17  2021     19             13\n",
+       "25521         16  2021     19             16\n",
+       "25546         15  2021     19             15\n",
+       "25568         18  2021     19             18\n",
+       "25590         19  2021     19             17"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_validation.head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediction = reg.predict(df_validation.iloc[:,:-3])\n",
+    "df_prediction = pd.DataFrame(data=prediction,columns=['predictedOrder'])\n",
+    "df_validation = df_validation.reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_compare = pd.concat([df_validation, df_prediction], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gridStart</th>\n",
+       "      <th>year</th>\n",
+       "      <th>round</th>\n",
+       "      <th>positionOrder</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>19</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>12</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>19</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>19</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>9</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>19</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>19</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>11</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>19</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>19</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>19</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>19</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>8</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>19</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>13</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>19</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>14</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>19</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>7</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>19</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>6</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>19</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>5</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>19</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>17</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>19</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>16</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>19</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>15</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>19</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>18</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>19</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>19</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>19</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    gridStart  year  round  positionOrder\n",
+       "0          10  2021     19              1\n",
+       "1          12  2021     19              9\n",
+       "2           0  2021     19             12\n",
+       "3           9  2021     19             11\n",
+       "4           4  2021     19              4\n",
+       "5          11  2021     19             19\n",
+       "6           1  2021     19              3\n",
+       "7           3  2021     19              6\n",
+       "8           2  2021     19              2\n",
+       "9           8  2021     19              8\n",
+       "10         13  2021     19             14\n",
+       "11         14  2021     19             20\n",
+       "12          7  2021     19              7\n",
+       "13          6  2021     19              5\n",
+       "14          5  2021     19             10\n",
+       "15         17  2021     19             13\n",
+       "16         16  2021     19             16\n",
+       "17         15  2021     19             15\n",
+       "18         18  2021     19             18\n",
+       "19         19  2021     19             17"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_compare.head(20)"
    ]
   }
  ],
