--- a/notebooks/03-feature-processing.ipynb
+++ b/notebooks/03-feature-processing.ipynb
@@ -102,15 +102,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/ww/g01k38ln5rx5dm_b_qtwpdkc0000gn/T/ipykernel_12777/4097412004.py:1: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only\n",
-      "  df = df.drop(['resultId','raceId','rank','driverStandingsId','constructorStandingsId','position','positionText','pointsGained',\n"
+      "/var/folders/ww/g01k38ln5rx5dm_b_qtwpdkc0000gn/T/ipykernel_8374/2509635224.py:1: FutureWarning: In a future version of pandas all arguments of DataFrame.drop except for the argument 'labels' will be keyword-only\n",
+      "  df = df.drop(['resultId','raceId','circuitId','rank','driverStandingsId','constructorStandingsId','position','positionText','pointsGained',\n"
      ]
     }
    ],
    "source": [
-    "df = df.drop(['resultId','raceId','rank','driverStandingsId','constructorStandingsId','position','positionText','pointsGained',\n",
+    "df = df.drop(['resultId','raceId','circuitId','rank','driverStandingsId','constructorStandingsId','position','positionText','pointsGained',\n",
     "'laps','nationality','time_x','milliseconds','fastestLapSpeed','fastestLapTime','fastestLap','statusId'\n",
-    ",'circuitName','dateOfDebut','status','driverStandingsId','driverStandingsPoints','constructorStandingsPoints'], 1)"
+    ",'dateOfDebut','status','driverStandingsId','driverStandingsPoints','constructorStandingsPoints'], 1)"
    ]
   },
   {
@@ -222,7 +222,7 @@
        "      <th>driverRef</th>\n",
        "      <th>year</th>\n",
        "      <th>round</th>\n",
-       "      <th>circuitId</th>\n",
+       "      <th>circuitName</th>\n",
        "      <th>date</th>\n",
        "      <th>ageAtRace</th>\n",
        "      <th>...</th>\n",
@@ -248,7 +248,7 @@
        "      <td>bettenhausen</td>\n",
        "      <td>1950</td>\n",
        "      <td>3</td>\n",
-       "      <td>19</td>\n",
+       "      <td>Indianapolis 500</td>\n",
        "      <td>1950-05-30</td>\n",
        "      <td>33</td>\n",
        "      <td>...</td>\n",
@@ -272,7 +272,7 @@
        "      <td>bettenhausen</td>\n",
        "      <td>1950</td>\n",
        "      <td>3</td>\n",
-       "      <td>19</td>\n",
+       "      <td>Indianapolis 500</td>\n",
        "      <td>1950-05-30</td>\n",
        "      <td>33</td>\n",
        "      <td>...</td>\n",
@@ -296,7 +296,7 @@
        "      <td>bonetto</td>\n",
        "      <td>1950</td>\n",
        "      <td>7</td>\n",
-       "      <td>14</td>\n",
+       "      <td>Italian Grand Prix</td>\n",
        "      <td>1950-09-03</td>\n",
        "      <td>47</td>\n",
        "      <td>...</td>\n",
@@ -320,7 +320,7 @@
        "      <td>villoresi</td>\n",
        "      <td>1954</td>\n",
        "      <td>9</td>\n",
-       "      <td>67</td>\n",
+       "      <td>Spanish Grand Prix</td>\n",
        "      <td>1954-10-24</td>\n",
        "      <td>45</td>\n",
        "      <td>...</td>\n",
@@ -344,7 +344,7 @@
        "      <td>ascari</td>\n",
        "      <td>1954</td>\n",
        "      <td>9</td>\n",
-       "      <td>67</td>\n",
+       "      <td>Spanish Grand Prix</td>\n",
        "      <td>1954-10-24</td>\n",
        "      <td>36</td>\n",
        "      <td>...</td>\n",
@@ -368,7 +368,7 @@
        "      <td>trintignant</td>\n",
        "      <td>1956</td>\n",
        "      <td>5</td>\n",
-       "      <td>55</td>\n",
+       "      <td>French Grand Prix</td>\n",
        "      <td>1956-07-01</td>\n",
        "      <td>38</td>\n",
        "      <td>...</td>\n",
@@ -397,37 +397,37 @@
        "22146       647            132          1             19        ascari  1954   \n",
        "20242       427            130         18             17   trintignant  1956   \n",
        "\n",
-       "       round  circuitId        date  ageAtRace  ...  previousRaceGridStart  \\\n",
-       "21179      3         19  1950-05-30         33  ...                    8.0   \n",
-       "21180      3         19  1950-05-30         33  ...                    8.0   \n",
-       "22445      7         14  1950-09-03         47  ...                   10.0   \n",
-       "21988      9         67  1954-10-24         45  ...                    6.0   \n",
-       "22146      9         67  1954-10-24         36  ...                    2.0   \n",
-       "20242      5         55  1956-07-01         38  ...                    7.0   \n",
+       "       round         circuitName        date  ageAtRace  ...  \\\n",
+       "21179      3    Indianapolis 500  1950-05-30         33  ...   \n",
+       "21180      3    Indianapolis 500  1950-05-30         33  ...   \n",
+       "22445      7  Italian Grand Prix  1950-09-03         47  ...   \n",
+       "21988      9  Spanish Grand Prix  1954-10-24         45  ...   \n",
+       "22146      9  Spanish Grand Prix  1954-10-24         36  ...   \n",
+       "20242      5   French Grand Prix  1956-07-01         38  ...   \n",
        "\n",
-       "       previousRacePosition  racesWon  racesRetired  racesFinished  \\\n",
-       "21179                  31.0       0.0           0.0            0.0   \n",
-       "21180                  31.0       0.0           0.0            0.0   \n",
-       "22445                  10.0       0.0           1.0            1.0   \n",
-       "21988                  13.0       0.0           9.0           15.0   \n",
-       "22146                  12.0      13.0          11.0           22.0   \n",
-       "20242                  10.0       1.0          21.0           16.0   \n",
+       "       previousRaceGridStart  previousRacePosition  racesWon  racesRetired  \\\n",
+       "21179                    8.0                  31.0       0.0           0.0   \n",
+       "21180                    8.0                  31.0       0.0           0.0   \n",
+       "22445                   10.0                  10.0       0.0           1.0   \n",
+       "21988                    6.0                  13.0       0.0           9.0   \n",
+       "22146                    2.0                  12.0      13.0          11.0   \n",
+       "20242                    7.0                  10.0       1.0          21.0   \n",
        "\n",
-       "      polePositions  racesWonByConstructor  racesRetiredByConstructor  \\\n",
-       "21179           0.0                    0.0                        0.0   \n",
-       "21180           0.0                    0.0                        0.0   \n",
-       "22445           0.0                    0.0                        0.0   \n",
-       "21988           1.0                    0.0                        0.0   \n",
-       "22146          13.0                    0.0                        0.0   \n",
-       "20242           1.0                    0.0                        0.0   \n",
+       "       racesFinished polePositions  racesWonByConstructor  \\\n",
+       "21179            0.0           0.0                    0.0   \n",
+       "21180            0.0           0.0                    0.0   \n",
+       "22445            1.0           0.0                    0.0   \n",
+       "21988           15.0           1.0                    0.0   \n",
+       "22146           22.0          13.0                    0.0   \n",
+       "20242           16.0           1.0                    0.0   \n",
        "\n",
-       "       percentageOfBestQuali  finished  \n",
-       "21179                  100.0      True  \n",
-       "21180                  100.0      True  \n",
-       "22445                  100.0     False  \n",
-       "21988                  100.0     False  \n",
-       "22146                  100.0     False  \n",
-       "20242                  100.0     False  \n",
+       "       racesRetiredByConstructor  percentageOfBestQuali  finished  \n",
+       "21179                        0.0                  100.0      True  \n",
+       "21180                        0.0                  100.0      True  \n",
+       "22445                        0.0                  100.0     False  \n",
+       "21988                        0.0                  100.0     False  \n",
+       "22146                        0.0                  100.0     False  \n",
+       "20242                        0.0                  100.0     False  \n",
        "\n",
        "[6 rows x 28 columns]"
       ]
@@ -512,7 +512,7 @@
       " 4   driverRef                     25593 non-null  object \n",
       " 5   year                          25593 non-null  int64  \n",
       " 6   round                         25593 non-null  int64  \n",
-      " 7   circuitId                     25593 non-null  int64  \n",
+      " 7   circuitName                   25593 non-null  object \n",
       " 8   date                          25593 non-null  object \n",
       " 9   ageAtRace                     25593 non-null  int64  \n",
       " 10  ageAtDebut                    25593 non-null  int64  \n",
@@ -533,7 +533,7 @@
       " 25  racesRetiredByConstructor     25593 non-null  float64\n",
       " 26  percentageOfBestQuali         25593 non-null  float64\n",
       " 27  finished                      25593 non-null  bool   \n",
-      "dtypes: bool(1), float64(13), int64(12), object(2)\n",
+      "dtypes: bool(1), float64(13), int64(11), object(3)\n",
       "memory usage: 5.5+ MB\n"
      ]
     }
@@ -556,7 +556,7 @@
    "outputs": [],
    "source": [
     "new_row = {'driverId':853, 'constructorId':210, 'gridStart':20, 'positionOrder':20, 'driverRef': 'mazepin',\n",
-    " 'year':2021, 'round':22, 'circuitId':77, 'date':'2021-12-12', 'ageAtRace':22, 'ageAtDebut':22,\n",
+    " 'year':2021, 'round':22, 'circuitName':'Abu Dhabi Grand Prix', 'date':'2021-12-12', 'ageAtRace':22, 'ageAtDebut':22,\n",
     "  'yearsExperience':0, 'racingAtHome':0, 'driverStandingsPosition':20,\n",
     "  'driverStandingsWins':0, 'lastRaceRank':19, 'constructorStandingsPosition':10,\n",
     "  'constructorStandingsWins':0, 'previousRaceGridStart':19, 'previousRacePosition': 18, 'racesWon':0,\n",
@@ -635,7 +635,7 @@
        "      <th>driverRef</th>\n",
        "      <th>year</th>\n",
        "      <th>round</th>\n",
-       "      <th>circuitId</th>\n",
+       "      <th>circuitName</th>\n",
        "      <th>date</th>\n",
        "      <th>ageAtRace</th>\n",
        "      <th>ageAtDebut</th>\n",
@@ -661,7 +661,7 @@
        "      <td>russell</td>\n",
        "      <td>2021</td>\n",
        "      <td>22</td>\n",
-       "      <td>24</td>\n",
+       "      <td>Abu Dhabi Grand Prix</td>\n",
        "      <td>2021-12-12</td>\n",
        "      <td>23</td>\n",
        "      <td>21</td>\n",
@@ -685,7 +685,7 @@
        "      <td>latifi</td>\n",
        "      <td>2021</td>\n",
        "      <td>22</td>\n",
-       "      <td>24</td>\n",
+       "      <td>Abu Dhabi Grand Prix</td>\n",
        "      <td>2021-12-12</td>\n",
        "      <td>26</td>\n",
        "      <td>25</td>\n",
@@ -709,7 +709,7 @@
        "      <td>tsunoda</td>\n",
        "      <td>2021</td>\n",
        "      <td>22</td>\n",
-       "      <td>24</td>\n",
+       "      <td>Abu Dhabi Grand Prix</td>\n",
        "      <td>2021-12-12</td>\n",
        "      <td>21</td>\n",
        "      <td>20</td>\n",
@@ -733,7 +733,7 @@
        "      <td>mick_schumacher</td>\n",
        "      <td>2021</td>\n",
        "      <td>22</td>\n",
-       "      <td>24</td>\n",
+       "      <td>Abu Dhabi Grand Prix</td>\n",
        "      <td>2021-12-12</td>\n",
        "      <td>22</td>\n",
        "      <td>22</td>\n",
@@ -757,7 +757,7 @@
        "      <td>mazepin</td>\n",
        "      <td>2021</td>\n",
        "      <td>22</td>\n",
-       "      <td>77</td>\n",
+       "      <td>Abu Dhabi Grand Prix</td>\n",
        "      <td>2021-12-12</td>\n",
        "      <td>22</td>\n",
        "      <td>22</td>\n",
@@ -780,40 +780,40 @@
        "</div>"
       ],
       "text/plain": [
-       "       gridStart  positionOrder        driverRef  year  round  circuitId  \\\n",
-       "25589         17             18          russell  2021     22         24   \n",
-       "25590         16             16           latifi  2021     22         24   \n",
-       "25591          8              4          tsunoda  2021     22         24   \n",
-       "25592         19             14  mick_schumacher  2021     22         24   \n",
-       "25593         20             20          mazepin  2021     22         77   \n",
+       "       gridStart  positionOrder        driverRef  year  round  \\\n",
+       "25589         17             18          russell  2021     22   \n",
+       "25590         16             16           latifi  2021     22   \n",
+       "25591          8              4          tsunoda  2021     22   \n",
+       "25592         19             14  mick_schumacher  2021     22   \n",
+       "25593         20             20          mazepin  2021     22   \n",
        "\n",
-       "             date  ageAtRace  ageAtDebut  yearsExperience  ...  racesWon  \\\n",
-       "25589  2021-12-12         23          21                2  ...       0.0   \n",
-       "25590  2021-12-12         26          25                1  ...       0.0   \n",
-       "25591  2021-12-12         21          20                0  ...       0.0   \n",
-       "25592  2021-12-12         22          22                0  ...       0.0   \n",
-       "25593  2021-12-12         22          22                0  ...       0.0   \n",
+       "                circuitName        date  ageAtRace  ageAtDebut  \\\n",
+       "25589  Abu Dhabi Grand Prix  2021-12-12         23          21   \n",
+       "25590  Abu Dhabi Grand Prix  2021-12-12         26          25   \n",
+       "25591  Abu Dhabi Grand Prix  2021-12-12         21          20   \n",
+       "25592  Abu Dhabi Grand Prix  2021-12-12         22          22   \n",
+       "25593  Abu Dhabi Grand Prix  2021-12-12         22          22   \n",
        "\n",
-       "       racesRetired  racesFinished  polePositions  racesWonByConstructor  \\\n",
-       "25589          10.0           49.0            0.0                  114.0   \n",
-       "25590           5.0           33.0            0.0                  114.0   \n",
-       "25591           3.0           17.0            0.0                    1.0   \n",
-       "25592           3.0           18.0            0.0                    0.0   \n",
-       "25593           4.0           17.0            0.0                    0.0   \n",
+       "       yearsExperience  ...  racesWon  racesRetired  racesFinished  \\\n",
+       "25589                2  ...       0.0          10.0           49.0   \n",
+       "25590                1  ...       0.0           5.0           33.0   \n",
+       "25591                0  ...       0.0           3.0           17.0   \n",
+       "25592                0  ...       0.0           3.0           18.0   \n",
+       "25593                0  ...       0.0           4.0           17.0   \n",
        "\n",
-       "       racesRetiredByConstructor  percentageOfBestQuali  finished  \\\n",
-       "25589                      399.0             102.818205     False   \n",
-       "25590                      399.0             102.714684     False   \n",
-       "25591                       10.0             101.353079      True   \n",
-       "25592                       48.0             103.406448      True   \n",
-       "25593                       46.0             115.000000      True   \n",
+       "       polePositions  racesWonByConstructor  racesRetiredByConstructor  \\\n",
+       "25589            0.0                  114.0                      399.0   \n",
+       "25590            0.0                  114.0                      399.0   \n",
+       "25591            0.0                    1.0                       10.0   \n",
+       "25592            0.0                    0.0                       48.0   \n",
+       "25593            0.0                    0.0                       46.0   \n",
        "\n",
-       "       percentRetired  posGainedLastRace  \n",
-       "25589        0.204082               -5.0  \n",
-       "25590        0.151515                4.0  \n",
-       "25591        0.176471               -6.0  \n",
-       "25592        0.166667               -1.0  \n",
-       "25593        0.235294                1.0  \n",
+       "       percentageOfBestQuali  finished  percentRetired  posGainedLastRace  \n",
+       "25589             102.818205     False        0.204082               -5.0  \n",
+       "25590             102.714684     False        0.151515                4.0  \n",
+       "25591             101.353079      True        0.176471               -6.0  \n",
+       "25592             103.406448      True        0.166667               -1.0  \n",
+       "25593             115.000000      True        0.235294                1.0  \n",
        "\n",
        "[5 rows x 28 columns]"
       ]
